--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>travel tracker</h1>
     <section class="form-section">
-        <form id="carForm">
+        <form id="destinationForm">
             <form id="destinationForm">
                 <input type="text" id="destination" placeholder="Destination name">
                 <br>
